# trash-db

./: .gitignore  Cargo.toml  README.md
benches/: bench.rs  threadpool_bench.rs
src/: commands.rs  lib.rs  server.rs
src/engines/: kvstore.rs  mod.rs  sled.rs
src/thread_pool/: mod.rs  naive.rs  rayon.rs  shared_queue.rs
tests/: cli.rs  kv_store.rs  tests.rs  thread_pool.rs
