[package]
name = "trash-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "kvs-server"
test = false
bench = false

[[bin]]
name = "kvs-client"
test = false
bench = false

[[bench]]
name = "engine_bench"
harness = false

[[bench]]
name = "threadpool_bench"
harness = false


[dependencies]
clap = { version = "4.4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10.1"
sled = "0.34.7"
rayon = "1.8.0"
num_cpus = "1.16.0"
criterion = "0.3"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
crossbeam-utils = "0.6.5"
panic-control = "0.1.4"
